--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,14 @@
     "react/prop-types": 0,
     "no-underscore-dangle": 0,
     "import/imports-first": ["error", "absolute-first"],
-    "import/newline-after-import": "error"
+    "import/newline-after-import": "error",
+    "react/destructuring-assignment": 0,
+    "react/sort-comp": [
+      1,
+      {
+        "order": ["static-methods", "lifecycle", "everything-else", "render"]
+      }
+    ]
   },
   "globals": {
     "window": true,
