--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "videojs-coursebuilder",
+  "name": "videojs-react-course-assistant",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -31,6 +32,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
+    "mini-css-extract-plugin": "^0.6.0",
     "prettier": "^1.17.0",
     "react-test-renderer": "^16.8.6",
     "webpack": "^4.30.0",
@@ -48,7 +50,9 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "core-js": "^2.6.5",
     "dotenv": "^7.0.0",
+    "linaria": "^1.3.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "video.js": "^7.5.4",
