--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
       {
         "order": ["static-methods", "lifecycle", "everything-else", "render"]
       }
-    ]
+    ],
+    "jsx-a11y/media-has-caption": 0
   },
   "env": {
     "jest/globals": true
