--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.6.0",
     "prettier": "^1.17.0",
     "react-test-renderer": "^16.8.6",
+    "url-loader": "^1.1.2",
     "video.js": "^7.5.4",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
@@ -57,6 +57,7 @@
     "core-js": "^2.6.5",
     "dotenv": "^7.0.0",
     "linaria": "^1.3.1",
+    "nanoid": "^2.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "videojs-react": "github:padraigfl/videojs-react",
